# am215-sec08

./: README.md
.github/workflows/: ci.yml
am215_lectures/: README.md
am215_lectures/lec01/: am215_lec01_linux.md  am215_lec01_linux_appendix.md  reset_files.sh
am215_lectures/lec01/files/: sample_data.txt
am215_lectures/lec02/: FAQ.md  am215_lec02_git.md  lec02_outline_draft.md
am215_lectures/lec03/: FAQ.md  am215_lec03_reproducibility.md
am215_lectures/lec03/code/: .gitignore  Dockerfile  (+12 more)
am215_lectures/lec04/: FAQ.md  am215_lec04_data_model_slides.md
am215_lectures/lec05/: FAQ.md  am215_lec05_packaging_slides.md
am215_lectures/lec05/code/04_full_package/: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  run_build.sh
am215_lectures/lec05/code/04_full_package/src/card_games/: __init__.py  fast_rules.pyx  strategies.json  visualize.py
am215_lectures/lec06/: FAQ.md  am215_lec06_testing_slides.md
am215_lectures/lec07/: FAQ.md  am215_lec07_code_quality_slides.md
am215_lectures/lec07/code/02_complete_project/: README.md  noxfile.py  pyproject.toml
am215_lectures/lec07/code/02_complete_project/.github/workflows/: ci.yml
am215_lectures/lec07/code/02_complete_project/docs/source/: conf.py  index.rst
am215_lectures/lec07/code/02_complete_project/src/my_package/: __init__.py  main.py
am215_lectures/lec07/code/02_complete_project/tests/: test_main.py
am215_lectures/lec08/: FAQ.md  am215_lec08_data_slides.md
am215_lectures/lec09/: FAQ.md
am215_lectures/lec10/: FAQ.md  am215_lec10_concurrency_slides.md
sections/sec02_am215/: .gitignore  EXPLANATION.md  README.md  hypersphere_volume.py  results.csv  visualize_results.py  volume_estimator.sh
sections/sec03_am215/: .gitignore  README.md  calc_residuals_and_slope.py  plot_finals_progress.py  simulate_best_of_seven.py  simulate_game.py
sections/sec06_am215/: .gitignore  README.md  analyze_scaling.py  distributions.py  evd_analyzer.py  gumbel_fitter.py  marathon_analyzer.py  requirements.txt
sections/sec07_am215/: README.md  starter_extended_sir.py
sections/sec08_am215/: .gitignore  README.md  pytest.ini  requirements.txt  test_traffic_flow.py  traffic_flow.py
(+97 files in other folders)
