[project]
name = "am215-quality-demo"
version = "0.1.0"
description = "A demo project for AM215 Lecture 7 on code quality."
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["nox[pbs]"]
# These aren't needed if only using nox or CI (e.g., GitHub Actions)
# But useful to demo these commands in the terminal
demo = ["ruff", "ty", "sphinx", "sphinx_autodoc_typehints", "sphinx-autobuild"]

# --- Tool Configuration ---

[tool.ruff]
# Same as black.
line-length = 88
# Enable Pyflakes (F), Pycodestyle (E, W), isort (I), and Bugbear (B) rules.
select = ["E", "W", "F", "I", "B"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

[tool.ty]
# Enable the strictest type checking rules.
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
